--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -11,10 +11,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: DEBUG
-        run: ls -la
 
-      - name: Teste
-        uses: ./
+      - uses: ./
         with:
           personal-access-token: ${{ secrets.PAT }}
