--- a/action.yml
+++ b/action.yml
@@ -16,9 +16,9 @@ inputs:
     default: "VERSION"
 
   update_released_versions:
-    description: "Update vN version if a new vN.X.Y version is released"
+    description: "Update vX and vX.Y versions if a new vX.Y.Z version is released"
     required: false
-    default: false
+    default: 'false'
 
 runs:
   using: "docker"
