--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -20,3 +20,4 @@ jobs:
         with:
           personal_access_token: ${{ secrets.PAT }}
           allowed_users: heitorpolidoro
+          update_released_versions: 'true'
