--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Create GitHub Release
-        uses: ./
+        uses: heitorpolidoro/auto-release@v1
         with:
           personal_access_token: ${{ secrets.PAT }}
           allowed_users: heitorpolidoro
