--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Create GitHub Release
+        if: github.event_name == 'push' || github.event.pull_request.merged == true
         uses: heitorpolidoro/auto-release@master
         with:
           personal_access_token: ${{ secrets.PAT }}
