--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -7,15 +7,18 @@ on:
 
 jobs:
   create-release:
+    name: Create Release
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Create GitHub Release
+        id: release
         if: github.event_name == 'push' || github.event.pull_request.merged == true
         uses: heitorpolidoro/auto-release@master
         with:
-          personal_access_token: ${{ secrets.PAT }}
-          allowed_users: heitorpolidoro
           update_released_versions: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
