--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create GitHub Release
         id: release
         if: github.event_name == 'push' || github.event.pull_request.merged == true
-        uses: heitorpolidoro/auto-release@v1
+        uses: heitorpolidoro/auto-release@master
         with:
           update_released_versions: true
         env:
